--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,20 @@
 /build/
 /build/
 /build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
