Ajustes Match Netbeans
Ajustes Match Netbeans

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,83 @@
 /build/
 /build/
 /build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
