--- a/src/co/com/qabox/soainvportal/labels.properties
+++ b/src/co/com/qabox/soainvportal/labels.properties
@@ -1,3 +1,27 @@
 labels.es.appname=SOA Inventory
-labels.technicalServiceName=Nombre del Servicio
 labels.changeLanguage=GO
+
+labels.createservice.techServTo.name=Nombre del Servicio
+labels.createservice.techServTo.nameRequired=El nombre del servicio es requerido
+labels.createservice.techServTo.createButton=Salvar
+
+labels.editservice.techServTo.name=Nombre del Servicio
+labels.editservice.techServTo.nameRequired=El nombre del servicio es requerido
+labels.editservice.techServTo.updateButton=Actualizar
+
+
+labels.createservice.persistenceException=Error ejecutando la transacción
+labels.updateservice.updatedOk=Servicio actualizado correctamente
+labels.createservice.createdOk=Servicio creado correctamente
+labels.removeservice.removedOk=Servicio creado correctamenet
+
+
+labels.listservice.tableName=Lista de Servicios
+labels.listservice.techServTo.createButton=Nuevo
+labels.listservice.techServTo.viewButton=Ver
+labels.listservice.techServTo.editButton=Editar
+labels.listservice.techServTo.deleteButton=Eliminar
+
+labels.listservice.techServTo.columnId=Identificador
+labels.listservice.techServTo.columnName=Nombre
+labels.listservice.findAllException=Error consultando los Items
