--- a/src/co/com/qabox/soainvportal/labels.properties
+++ b/src/co/com/qabox/soainvportal/labels.properties
@@ -15,12 +15,14 @@ labels.updateservice.updatedOk=Servicio actualizado correctamente
 labels.createservice.createdOk=Servicio creado correctamente
 labels.removeservice.removedOk=Servicio creado correctamenet
 
-
+labels.listservice.title=Servicios existentes
 labels.listservice.tableName=Lista de Servicios
+labels.listservice.technicalServiceItem=Servicio
 labels.listservice.techServTo.createButton=Nuevo
 labels.listservice.techServTo.viewButton=Ver
 labels.listservice.techServTo.editButton=Editar
 labels.listservice.techServTo.deleteButton=Eliminar
+labels.listservice.NoneTechnicalServices=No existen TechnicalServices creados
 
 labels.listservice.techServTo.columnId=Identificador
 labels.listservice.techServTo.columnName=Nombre
