--- a/.gitignore
+++ b/.gitignore
@@ -307,3 +307,77 @@
 /build/
 /build/
 /build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
