--- a/src/co/com/qabox/soainvportal/labels.properties
+++ b/src/co/com/qabox/soainvportal/labels.properties
@@ -27,3 +27,8 @@ labels.listservice.NoneTechnicalServices=No existen TechnicalServices creados
 labels.listservice.techServTo.columnId=Identificador
 labels.listservice.techServTo.columnName=Nombre
 labels.listservice.findAllException=Error consultando los Items
+
+menu.1.servicesMasterLabel=Maestro de Servicios
+menu.1.technicalServicesLabel=Servicios técnicos
+menu.1.listServices=Ver servicios
+menu.1.createService=Crear servicio
