--- a/src/co/com/qabox/soainvportal/loginlabels.properties
+++ b/src/co/com/qabox/soainvportal/loginlabels.properties
@@ -10,3 +10,4 @@ login.roles.analyst=Analista
 login.roles.architect=Arquitecto
 login.roles.developer=Desarrollador
 login.roles.manager=Manager
+login.roles.admin=Administrador
