Ultimos ajustes de menús para pruebas

--- a/src/co/com/qabox/soainvportal/labels.properties
+++ b/src/co/com/qabox/soainvportal/labels.properties
@@ -32,3 +32,4 @@ menu.1.servicesMasterLabel=Maestro de Servicios
 menu.1.technicalServicesLabel=Servicios técnicos
 menu.1.listServices=Ver servicios
 menu.1.createService=Crear servicio
+menu.1.checkBusinessServices=Servicios de negocio
